--- a/code/src/index.css
+++ b/code/src/index.css
@@ -20,9 +20,32 @@ code {
 
 article {
   border: solid black;
-  margin: 10px;
+  margin: 20px;
+  height: 150px;
+  box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
+  -webkit-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
+  -moz-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
 }
 
 form {
+  background-color: #F2F0F0;
   border: solid black;
+  box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
+  -webkit-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
+  -moz-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
+}
+
+.text-input {
+  font-family: 'Roboto Mono', monospace;
+}
+
+.send-button {
+  background-color: #FFADAD;
+  padding: 5px;
+  border: none;
+  border-radius: 15px;
+}
+
+.sent-messages {
+  font-family: 'Roboto Mono', monospace;
 }
