--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.flex-parent {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.message-display-div {
+  background-color: pink;
+  word-wrap: break-word;
+  width: 30vw;
+  margin: 8px;
+}
+
+.form-div {
+  background-color: white;
+  margin: 30px;
+  width: 30vw;
+  height: 30vh;
+  /* text-align: center; */
+}
