--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --red-but-not-red: #e73c7e;
-  --grey-but-not-grey: #c8c8c8;
+  --grey-but-not-grey: #aea7a7;
   --black-but-not-black: #121212;
   --white-but-not-white: #f7f7f7;
   --black-but-not-black-shadow: rgba(18, 18, 18, 0.9);
