--- a/happy-thoughts/src/index.css
+++ b/happy-thoughts/src/index.css
@@ -12,16 +12,9 @@ button {
   border: none;
 }
 
-textarea {
-  font-family: 'Roboto Slab', serif;
-  font-weight: 500;
-  resize: none;
-  min-height: 50px;
-  margin: 10px 0 15px;
-}
-
 h1 {
   color: white;
+  font-size: 30px;
   text-shadow: black 2px 5px;
 }
 
@@ -30,13 +23,36 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #1e5469;
+  background-color: #216986;
+}
+
+.cards {
+  margin-bottom: 35px;
+  padding: 10px 10px 20px;
+  width: 250px;
+  height: auto;
+  -moz-box-shadow: 7px 8px 1px 0px black;
+  -webkit-box-shadow: 7px 8px 1px 0px black;
+  box-shadow: 7px 8px 1px 0px black;
+  background-color: white;
+}
+
+.cards::first-letter {
+  text-transform: capitalize;
+}
+
+textarea {
+  font-family: 'Roboto Slab', serif;
+  font-weight: 500;
+  resize: none;
+  min-height: 50px;
+  margin: 10px 0 15px;
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  background-color: #e7e7e7;
+  background-color: #dfdfdf;
 }
 
 .form button {
@@ -48,27 +64,57 @@ h1 {
   border-radius: 25px;
 }
 
-
-.cards {
-  border: 2px solid black;
-  margin-bottom: 35px;
-  padding: 10px 10px 20px;
-  width: 500px;
-  height: auto;
-  -moz-box-shadow: 7px 8px 1px 0px black;
-  -webkit-box-shadow: 7px 8px 1px 0px black;
-  box-shadow: 7px 8px 1px 0px black;
-  background-color: white;
+.form span {
+  font-size: 17px;
 }
 
 .heart-button {
   background-color: #eaeaea;
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
   font-size: 17px;
   border-radius: 50px;
 }
 
-.icon {
-  font-size: 17px;
+.red-heart-button {
+  background-color: #fdaead;
+}
+
+.thought-cards p {
+  overflow-wrap: break-word;
+}
+
+.details-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.details-wrapper p {
+  margin-right: 15px;
+  color: #adadad;
+}
+
+.likes {
+  margin-left: 10px;
+  color: #adadad;
+  font-size: 14px;
+  display: inline-flex;
+}
+
+@media (min-width: 375px) {
+  .cards {
+    width: 300px;
+  }
+}
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 34px;
+  }
+
+  .cards {
+    border: 2px solid black;
+    width: 500px;
+  }
+
 }
