--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,25 +12,85 @@ code {
     monospace;
 }
 
+/* Mobile-first  */
 .flex-parent {
-  background-color: black;
+  background-color: pink;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .message-display-div {
-  background-color: pink;
+  background-color: white;
+  border: 2px solid grey;
+  box-shadow: 8px 7px 5px black;
   word-wrap: break-word;
-  width: 30vw;
+  width: 80vw;
   margin: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.message-display-div span {
+  display: flex;
+  justify-content: space-between;
 }
 
 .form-div {
-  background-color: white;
+  background-color: lightgrey;
   margin: 30px;
-  width: 30vw;
-  height: 30vh;
+  width: 80vw;
+  height: 40vh;
+  padding-left: 20px;
+  padding-right: 20px;
   /* text-align: center; */
+}
+
+.form-div input {
+  width: 80vw;
+  height: 100px;
+}
+
+.form-button {
+  background-color: pink;
+  border: none;
+  border-radius: 50px;
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .message-display-div {
+    background-color: white;
+    border: 2px solid grey;
+    box-shadow: 8px 7px 5px black;
+    word-wrap: break-word;
+    width: 30vw;
+    margin: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  
+  .form-div {
+    background-color: lightgrey;
+    margin: 30px;
+    width: 30vw;
+    height: 30vh;
+    padding-left: 20px;
+    padding-right: 20px;
+    /* text-align: center; */
+  }
+  
+  .form-div input {
+    width: 30vw;
+    height: 50px;
+  }
+  
+  .form-button {
+    background-color: pink;
+    border: none;
+    border-radius: 50px;
+    font-size: 20px;
+    margin-top: 30px;
+  }
 }
