--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,13 +31,9 @@ code {
 	color: var(--clr-secondary);
 }
 
-buttons {
-	font-family: inherit;
-}
-
 /***   LAYOUT   ***/
 main {
-	max-width: 650px;
+	max-width: 600px;
 }
 
 .input-container,
@@ -100,7 +96,7 @@ textarea.red-text {
 
 /***   BUTTONS   ***/
 button {
-	font-size: 1rem;
+	font-size: 0.9rem;
 	font-family: 'Roboto Mono', monospace;
 	font-weight: 400;
 	height: 50px;
@@ -118,7 +114,7 @@ img.likes {
 }
 
 .send-btn {
-	width: 270px;
+	width: 250px;
 	background: var(--clr-accent);
 	margin-right: 0.5em;
 }
@@ -158,5 +154,16 @@ img.likes {
 @keyframes spin {
 	100% {
 		transform: rotate(360deg);
+	}
+}
+
+@media (min-width: 668px) {
+	label {
+		font-size: 1.2rem;
+	}
+
+	.send-btn {
+		font-size: 1.1rem;
+		width: 320px;
 	}
 }
