--- a/code/src/index.css
+++ b/code/src/index.css
@@ -55,6 +55,7 @@ main {
 	justify-content: space-between;
 	align-items: center;
 	margin-top: 1em;
+	font-size: 0.8rem;
 }
 
 .thoughts-container--item {
@@ -99,14 +100,14 @@ button {
 	font-size: 0.9rem;
 	font-family: 'Roboto Mono', monospace;
 	font-weight: 400;
-	height: 50px;
+	height: 45px;
 	border: none;
 	color: var(--clr-black);
 	border-radius: 25px;
 }
 
 .heart-icon {
-	height: 18px;
+	height: 15px;
 }
 
 img.likes {
@@ -116,7 +117,7 @@ img.likes {
 .send-btn {
 	width: 250px;
 	background: var(--clr-accent);
-	margin-right: 0.5em;
+	margin-right: 0.25em;
 }
 
 .like-btn {
@@ -162,8 +163,20 @@ img.likes {
 		font-size: 1.2rem;
 	}
 
+	button {
+		height: 50px;
+	}
+
 	.send-btn {
 		font-size: 1.1rem;
 		width: 320px;
+	}
+
+	.heart-icon {
+		height: 20px;
+	}
+
+	.input-container--details {
+		font-size: 1rem;
 	}
 }
