--- a/code/src/index.css
+++ b/code/src/index.css
@@ -102,6 +102,17 @@ button {
 	border: none;
 	color: var(--clr-black);
 	border-radius: 25px;
+	cursor: pointer;
+}
+
+.send-btn:hover {
+	background-color: var(--clr-secondary);
+	transition: all 0.75s ease-in-out;
+}
+
+.heart-icon:hover {
+	transform: scale(1.1);
+	transition: all 0.5s ease-in;
 }
 
 .heart-icon {
@@ -153,95 +164,6 @@ img.likes {
 @keyframes spin {
 	100% {
 		transform: rotate(360deg);
-	}
-}
-
-/***   Hearts   ***/
-
-/* Styling Heart */
-.heart {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	color: red;
-	height: 10px;
-	width: 10px;
-	/* Animating heart */
-	animation: pulse 1.25s linear infinite;
-}
-
-.heart.heart-one {
-	left: 80vw;
-	top: 50vh;
-	animation: pulse 1.5s linear infinite;
-}
-
-.heart.heart-two {
-	left: 75vw;
-	top: 15vh;
-	animation: pulse 1.75s linear infinite;
-}
-
-.heart.heart-three {
-	left: 20vw;
-	top: 55vh;
-	animation: pulse 1.5s linear infinite;
-}
-
-.heart.heart-four {
-	left: 15vw;
-	top: 25vh;
-	animation: pulse 1.75s linear infinite;
-}
-
-.heart.heart-five {
-	left: 5vw;
-	top: 65vh;
-}
-
-.heart.heart-six {
-	left: 87vw;
-	top: 80vh;
-	animation: pulse 1.25s linear infinite;
-}
-
-.heart.heart-seven {
-	left: 69vw;
-	top: 72vh;
-}
-
-.heart.heart-eight {
-	left: 95vw;
-	top: 30vh;
-	animation: pulse 1.75s linear infinite;
-}
-
-.heart.heart-nine {
-	left: 15vw;
-	top: 90vh;
-	animation: pulse 1.5s linear infinite;
-}
-
-.heart.heart-ten {
-	left: 5vw;
-	top: 10vh;
-	animation: pulse 1.5s linear infinite;
-}
-
-@keyframes pulse {
-	0% {
-		transform: scale(1);
-		opacity: 0;
-	}
-	50% {
-		transform: scale(1.3);
-		opacity: 1;
-	}
-	100% {
-		transform: scale(1);
-		opacity: 0;
 	}
 }
 
