--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,12 @@
 :root {
-  --marigold: rgb(236, 164, 0);
-  --marigold-tranparent: #eca50060;
-  --pale-green: #EAF8BF;
-  --blue-sapphire: #006992;
-  --indigo: #27476E;
-  --indigo-tranparent: #27476e9f;
+  --marigold-strong: rgb(236, 165, 0);
+  --marigold-medium: rgba(236, 165, 0, 0.788);
+  --marigold-light: rgba(236, 165, 0, 0.376);
+  --pale-green: rgb(234, 248, 191);
+  --blue-sapphire: rgb(0, 105, 146);
+  --indigo: rgb(39, 71, 110);
+  --indigo-tranparent: rgba(39, 71, 110, 0.624);
+  --disabled-grey: rgba(191, 202, 157, 0.769);
 }
 
 * {
@@ -34,22 +36,23 @@ code {
 }
 
 .all-thoughts {
-  width: 35em;
+  width: 30em;
   max-width: 80%;
   margin: 0 auto;
 }
 
 .card {
   background-color: var(--pale-green);
-  box-shadow: 1rem 1rem var(--marigold);
+  box-shadow: 1rem 1rem var(--marigold-strong);
   padding: 1rem;
   margin: 4rem auto;
-  border: 2px solid var(--marigold);
+  border: 2px solid var(--marigold-strong);
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
   color: var(--indigo-tranparent);
   word-break: break-word;
+  min-height: 10em;
 }
 
 .thought-header,
@@ -58,20 +61,22 @@ label {
   color: var(--indigo);
 }
 
-.add-thought-header {
-  margin-bottom: 1rem;
-}
-
 .textarea {
   width: 100%;
-  height: 3rem;
+  font-size: 1.2rem;
+  min-height: 7ch;
+  margin: 1rem 0;
+}
+
+.length-counter {
+  text-align: end;
 }
 
 button {
   border-radius: 2rem;
-  padding: 10px;
+  padding: .5rem;
   border: none;
-  background-color: var(--marigold-tranparent);
+  background-color: var(--marigold-medium);
   transition: background-color .3s ease;
   display: inline-grid;
   justify-content: center;
@@ -79,11 +84,29 @@ button {
 }
 
 button:hover {
-  background-color: var(--marigold);
+  background-color: var(--marigold-strong);
+  cursor: pointer;
+  padding: .4rem;
+}
+
+button:hover > .heart-icon {
+  width: 1.7rem;
+}
+
+button:disabled {
+  background-color: var(--marigold-light);
+  cursor: default;
+}
+
+.heart-icon {
+  width: 1.5rem;
 }
 
 .likes-container {
+  display: flex;
+  align-items: center;
   align-self: center;
+  gap: .5rem;
 }
 
 .number-of-likes {
