--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'Red Hat Mono', monospace;
+  /*font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif;*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fdc4c4;
@@ -20,10 +21,11 @@ code {
 }
 
 header h1 {
+  display:none;
   font-size: 40px;
-  color: #ffff;
+  color: rgb(252, 235, 235);
   margin-bottom: 5%;
-  text-shadow: 5px 5px black;
+  text-shadow: 2px 2px black;
 }
 
 .newThoughtForm {
@@ -39,6 +41,7 @@ header h1 {
 
 .new-thought-textarea {
   width: 100%;
+  height: 50px;
   margin: 5px 0;
   font-size: 16px;
   margin: 10px 0;
@@ -79,7 +82,7 @@ header h1 {
   overflow-wrap: break-word;
 }
 
-.thought-item-form p {
+.likes {
 margin: 0 0 10px 0;
 }
 
@@ -104,16 +107,18 @@ margin: 0 0 10px 0;
 }
 
 .date {
-  text-align: right;
+  text-align: end;
   color: grey;
   font-weight: 300;
   font-size: 14px;
+  margin-top:0;
 }
 
 .counter {
   text-align: right;
   margin: 0;
   color:grey;
+  font-size: 10px;
 }
 
 .counter-red {
@@ -157,4 +162,24 @@ margin: 0 0 10px 0;
     transform: rotate(360deg);
   }
 
+}
+
+@media (min-width: 800px) {
+  .thought-item-form, .newThoughtForm {
+    width: 500px;
+  }
+
+  header h1 {
+    font-size: 60px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .thought-item-form, .newThoughtForm {
+    width: 800px;
+  }
+
+  header h1 {
+    font-size: 90px;
+  }
 }
