--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 10px;
+  margin: 15px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,4 +14,128 @@ code {
 
 .date {
   font-style: italic;
+}
+
+/* --------------form--------------- */
+
+.form {
+  width: 425px;
+  height: auto;
+  margin: 0 auto;
+  background-color: rgb(240, 240, 240);
+  border: 1px solid #7A7979;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  box-shadow: 8px 8px #333;
+}
+
+textarea {
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 400;
+  width: 400px;
+  resize: none;
+
+}
+.text-input {
+  border: 1px solid #c7c7c7;
+  padding: 10px;
+
+}
+
+.send-button {
+  background-color: #F3B1AF;
+  border-radius: 24px;
+  height: 50px;
+  margin-top: 1rem;
+  font-size: 14px;
+  border: none;
+  font-family: 'Rubik', sans-serif;
+}
+
+.send-button:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+/* -------------thought items----------- */
+
+.thought-item{
+  width: 425px;
+  margin: 0 auto;
+  background-color: #fff;
+  border: 1px solid #c2c2c2;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  box-shadow: 8px 8px #333;
+}
+
+.message {
+  font-family: 'Roboto Mono', monospace;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.likes {
+  display: flex;
+  flex-direction:row;
+}
+
+.like-button {
+  background-color: lightgrey;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+}
+.total-likes {
+  color: lightgrey;
+  margin-left: 10px;
+
+}
+
+.date {
+  color: lightgrey;
+}
+
+.likes-date {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/* -------------loading----------- */
+
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #dcdcdc;
+  border-radius: 50%;
+  border-left: 5px solid #fff;
+  animation: spinner infinite 0.5s;
+  display: inline-block;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
