add overflow-wrap for breaking long words

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -59,6 +59,7 @@ main {
 .thoughts-container--item {
 	padding: 1em 1em;
 	background: var(--clr-white);
+	overflow-wrap: break-word;
 }
 
 .message-text {
