--- a/code/src/components/SendMessageCard.css
+++ b/code/src/components/SendMessageCard.css
@@ -25,15 +25,23 @@
 }
 
 .message-send-button {
-  background-color: rgb(255, 173, 173, 0.6);
+  background-color: rgb(255, 173, 173, 1);
   opacity: 0.8;
   border: none;
   border-radius: 50px;
   padding: 7px 17px;
   margin: 10px 0;
   font-size: 14px;
+  cursor: pointer;
 }
 
-.message-send-button:hover {
-  background-color: rgb(255, 173, 173, 1);
+@media screen and (min-width: 1200px) {
+  .message-send-button {
+    background-color: rgb(255, 173, 173, 0.5);
+    opacity: 0.8;
+  }
+
+  .message-send-button:hover {
+    background-color: rgb(255, 173, 173, 1);
+  }
 }
