--- a/code/src/index.css
+++ b/code/src/index.css
@@ -25,6 +25,9 @@ article {
   box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
   -webkit-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
   -moz-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 form {
@@ -50,21 +53,51 @@ label {
   margin: 15px 0 15px 15px;
 }
 
-.send-button {
+.characters {
+  margin-left: 15px;
+}
+
+.red-text {
+  color: red;
+}
+
+.send-btn {
   background-color: #FFADAD;
   color: black;
   padding: 5px;
   border: none;
   border-radius: 15px;
-  margin: 15px 0 15px 15px;
+  
+  cursor: pointer;
+}
+
+.send-btn:disabled {
+  background-color: gray;
+  cursor:default;
 }
 
 .sent-messages {
   font-family: 'Roboto Mono', monospace;
+  font-size: 16px;
+  margin: 0 5px 5px 5px;
 }
 
-.heart-button {
+.heart-btn {
   border-radius: 50%;
   border: none;
   padding: 10px 10px 10px 10px;
+  cursor: pointer;
+}
+
+.liked {
+  background-color: #FFADAD;
+
+}
+
+.number-of-likes {
+  margin: 0;
+}
+
+.btn-group {
+  margin: 15px 0 15px 15px;
 }
