--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,14 +5,9 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ffe9e9;
+  background: #ffffff;
   font-family: "Roboto", "Courier New", Courier, monospace;
 }
-
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} */
 
 h1 {
   font-family: "Inconsolata", "Courier New", Courier, monospace;
@@ -52,7 +47,7 @@ h1 {
   padding: 5px 0 80px 5px;
 }
 
-/* THOUGHT LIST */
+/* THOUGHT MESSAGES */
 
 .thought-box {
   border: 1px solid black;
@@ -60,12 +55,19 @@ h1 {
   padding: 30px;
 }
 
+.heart-btn {
+  background: #eaeaea;
+  border-radius: 50%;
+  border: none;
+  padding: 12px;
+}
+
 /* FOOTER */
 
 .footer-section {
   font-size: 16px;
   text-align: center;
-  color: #8e216a;
+  color: #c54848;
 }
 
 .footer-link {
