--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,27 +1,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
 
-body {
+/* BASIC STYLING */
+* {
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #ffffff;
-  font-family: "Roboto", "Courier New", Courier, monospace;
+  padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  text-rendering: optimizeLegibility;
 }
 
-h1 {
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-family: "Inconsolata", "Courier New", Courier, monospace;
-  font-weight: 700;
+  background: #ffffff;
+  line-height: 1.7;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* THOUGHTFORM*/
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.thought-container {
+  width: 85%;
+}
 
 .thought-form {
+  margin-top: 20px;
   background: #f2f0f0;
-  display: inline-block;
-  padding: 15px;
-  border: 1px solid black;
-  box-shadow: 2px 10px 20px 1px;
+  padding: 20px;
+  border: 1px solid;
+  box-shadow: 5px 10px;
+  width: 100%;
 }
 
 .btn-happy-thought {
@@ -48,7 +69,6 @@ h1 {
 }
 
 /* THOUGHT MESSAGES */
-
 .thought-box {
   border: 1px solid black;
   margin-top: 20px;
@@ -62,8 +82,14 @@ h1 {
   padding: 12px;
 }
 
-/* FOOTER */
+.red-heart-btn {
+  background: #fdaead;
+  border-radius: 50%;
+  border: none;
+  padding: 12px;
+}
 
+/* FOOTER */
 .footer-section {
   font-size: 16px;
   text-align: center;
