--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;400;500;600;700&display=swap");
 
 /* BASIC STYLING */
 * {
@@ -15,8 +15,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Inconsolata", "Courier New", Courier, monospace;
-  background: #ffffff;
+  background: linear-gradient(228deg, #ffcfcf 15%, #f6a4a4 30%, #faa4a4 40%);
   line-height: 1.7;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
 
 .page {
@@ -26,6 +33,11 @@ body {
 }
 
 /* THOUGHTFORM*/
+
+h2 {
+  font-size: 18px;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -66,6 +78,7 @@ main {
 .text-input {
   width: 100%;
   padding: 5px 0 80px 5px;
+  font-weight: 500;
 }
 
 /* THOUGHT MESSAGES */
@@ -100,6 +113,7 @@ main {
   text-align: center;
   color: #000;
   margin-top: 50px;
+  margin-bottom: 20px;
   letter-spacing: 0.1px;
 }
 
