--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,6 +11,12 @@
   text-rendering: optimizeLegibility;
 }
 
+:root {
+  --clr-black: #111111;
+  --clr-white: #fff;
+  --clr-link: rgba(174, 9, 9, 0.933);
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -64,6 +70,7 @@ main {
   border-radius: 30px;
   padding: 12px;
   margin-top: 10px;
+  cursor: pointer;
 }
 
 .message-length-ok {
@@ -89,6 +96,7 @@ main {
   padding: 30px;
   box-shadow: 7px 10px;
   font-family: "Roboto", sans-serif;
+  background: var(--clr-white);
 }
 
 .heart-btn {
@@ -112,7 +120,7 @@ main {
   justify-content: center;
   font-size: 16px;
   text-align: center;
-  color: #000;
+  color: var(--clr-black);
   margin-top: 50px;
   margin-bottom: 20px;
   letter-spacing: 0.1px;
@@ -120,5 +128,5 @@ main {
 
 .footer-link {
   text-decoration: none;
-  color: rgba(174, 9, 9, 0.933);
+  color: var(--clr-link);
 }
