--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 5px;
   background-color: var(--main-bg-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,16 +19,16 @@ body {
 .newThoughtContainer {
   background-color: lightgray;
   margin: 15px;
-  width: 85vw;
   padding: 10px;
   border: 1px solid black;
   box-shadow: 10px 10px black;
+  height: 200px;
 }
 
 .inputMessage {
   display: block;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px 20px 10px 0px;
+  width: 100%;
 }
 
 h1 {
@@ -57,6 +57,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: fit-content;
 }
 
 .thoughtCard {
@@ -107,15 +108,15 @@ button {
   .newThoughtContainer {
     width: 65vw;
   }
+
+  .inputMessage {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1025px) {
   .thoughtCard,
   .newThoughtContainer {
-    width: 40vw;
-  }
-
-  .inputMessage {
-    width: 30vw;
+    width: 25vw;
   }
 }
