--- a/code/src/index.css
+++ b/code/src/index.css
@@ -43,8 +43,8 @@ form {
 }
 
 label {
-  margin: 15px 0 10px 15px;
-  font-size: 16px;
+  margin: 15px 0 10px 5px;
+  font-size: 18px;
   font-weight: bold;
   font-family: 'Courier New', Courier, monospace;
 }
@@ -123,4 +123,16 @@ label {
 
 .btn-group {
   margin: 15px 0 5px 15px;
+}
+
+@media (min-width: 1025px) {
+
+  label {
+    margin: 15px 0 10px 15px;
+    font-size: 16px;
+  }
+
+  .send-btn {
+    font-size: 16px;
+  }
 }
