--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,72 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  box-sizing: border-box;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 1em;
+  background-color: pink;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/*------Happy Thoughts------*/
+
+.main-container {
+  background-color: #e9e7e7;
+  border: 1px solid #000;
+  padding: 1em;
+  width: 350px;
+  margin: 1em auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  box-shadow: 6px 6px 1px 1px rgb(5 5 5 / 90%);
+}
+
+textarea {
+  border: 0;
+  padding-top: 1em;
+  padding-left: 1em;
+  margin: 0;
+  resize: none;
+  min-width: 90%;
+  max-width: 90%;
+  min-height: 1em;
+}
+.happy-button {
+  background-color: lightpink;
+  font-size: 18px;
+  font-weight: 700;
+}
+.heart {
+  font: 2em;
+  color: red;
+}
+label {
+}
+/*------ThoughtCard------*/
+
+.message-text {
+}
+
+.text-thought {
+}
+
+.likes-container {
+}
+.icons {
+}
+.heart {
+}
+.time {
 }
