--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,6 +16,7 @@
   --clr-white: #fff;
   --clr-grey: #6f6d6d;
   --clr-link: rgba(174, 9, 9, 0.933);
+  --clr-error: red;
 }
 
 body {
@@ -80,7 +81,7 @@ main {
 }
 
 .message-length-error {
-  color: red;
+  color: var(--clr-error);
   font-size: 14px;
 }
 
@@ -89,6 +90,8 @@ main {
   padding: 5px 0 80px 5px;
   font-weight: 500;
   font-size: 1rem;
+  border: 1px solid var(--clr-grey);
+  background: var(--clr-white);
 }
 
 /* THOUGHT MESSAGES */
@@ -99,6 +102,23 @@ main {
   box-shadow: 7px 10px;
   font-family: "Roboto", sans-serif;
   background: var(--clr-white);
+}
+
+.input-container-details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.likes-container {
+  display: flex;
+  align-items: center;
+}
+
+.likes {
+  color: var(--clr-grey);
+  font-size: 14px;
 }
 
 .heart-btn {
