--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,19 +1,102 @@
 :root {
+  --clr-white: #fff;
+  --clr-black: #000;
   --clr-accent: #f4acac;
   --clr-lightgrey: #eaeaea;
+  --clr-grey: #818181;
+  --clr-background: #a2b983;
 }
 
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
+  font-family: "Monaco", monospace;
+  background-color: var(--clr-background);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: "Monaco", monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-code {
-  /* font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace; */
+main {
+  max-width: 600px;
+}
+
+.form-container,
+.thought-container {
+  display: flex;
+  flex-direction: column;
+  margin: 2em 1em;
+  padding: 1em;
+  border: 1px solid var(--clr-black);
+  box-shadow: 7px 7px var(--clr-black);
+}
+
+.btn-container {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  margin-top: 1em;
+  font-size: 1em;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  border-radius: 25px;
+  color: var(--clr-black);
+}
+
+.characters,
+.date {
+  color: var(--clr-grey);
+}
+
+/*Thought Form*/
+.form-container {
+  background-color: var(--clr-lightgrey);
+}
+
+label {
+  margin: 0 0 1em;
+}
+
+textarea {
+  font-size: 16px;
+  resize: none;
+  outline: none;
+  border: solid 1px var(--clr-grey);
+  height: 5em;
+  padding: 0.5em;
+}
+
+.submit-btn {
+  background: var(--clr-accent);
+  width: 250px;
+  height: 50px;
+  font-size: 1em;
+}
+
+/*Thought Item*/
+.thought-container {
+  background: var(--clr-white);
+  /* overflow-wrap: break-word; */
+}
+
+.message {
+  margin: 5px;
+}
+
+.like-container {
+  display: flex;
+}
+
+.like-btn {
+  background: var(--clr-lightgrey);
+  width: 50px;
+  height: 50px;
+}
+
+.like-counter {
 }
