--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,8 +12,9 @@ h1 {
 }
 .thought {
  border: 1px solid black; 
- margin: 10px;
- width: 320px;
+ box-shadow: 7px 7px black;
+ margin: 25px 0 25px 0;
+ width: 360px;
  height: 100px;
  padding: 20px 0 20px 10px;
 }
@@ -25,15 +26,45 @@ h1 {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 330px;
+  width: 360px;
   border: 1px solid black;
+  box-shadow: 7px 7px black;
 }
 
 .post-thought-form textarea{
   width: 280px;
   height: 80px;
+  margin-left: 35px;
 }
 
 .send-btn {
-  margin: 10px 0 10px 0;
+  margin: 10px 0 10px 20px;
+}
+
+.likes-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.heart-icon-radius {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: rgb(214, 214, 214);
+  border-radius: 50%;
+  position: relative;
+}
+
+.heart-icon {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+}
+
+.date {
+  font-size: .8em;
+  color: grey;
+  margin-right: 10px;
 }
