--- a/code/src/components/SendMessageCard.css
+++ b/code/src/components/SendMessageCard.css
@@ -25,13 +25,15 @@
 }
 
 .message-send-button {
+  color: inherit;
+  font-size: 14px;
+  font-weight: normal;
   background-color: rgb(255, 173, 173, 1);
   opacity: 0.8;
   border: none;
   border-radius: 50px;
   padding: 7px 17px;
   margin: 10px 0;
-  font-size: 14px;
   cursor: pointer;
 }
 
