--- a/code/src/components/SendMessageCard.css
+++ b/code/src/components/SendMessageCard.css
@@ -29,7 +29,6 @@
   font-size: 14px;
   font-weight: normal;
   background-color: rgb(255, 173, 173, 1);
-  opacity: 0.8;
   border: none;
   border-radius: 50px;
   padding: 7px 17px;
@@ -37,13 +36,7 @@
   cursor: pointer;
 }
 
-@media screen and (min-width: 1200px) {
-  .message-send-button {
-    background-color: rgb(255, 173, 173, 0.5);
-    opacity: 0.8;
-  }
-
-  .message-send-button:hover {
-    background-color: rgb(255, 173, 173, 1);
-  }
+.message-send-button:disabled {
+  background-color: rgb(255, 173, 173, 0.5);
+  opacity: 0.8;
 }
