--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,74 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto Mono", monospace;
+  box-sizing: border-box;
+  background-color: pink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* FORM PART  */
+
+form {
+  border: black 1px solid;
+  width: 400px;
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  box-shadow: 8px 8px;
+  margin-bottom: 20px;
+}
+.header-text {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.input {
+  height: 70px;
+  display: flex;
+  margin-bottom: 13px;
+}
+
+.form-button {
+  background-color: pink;
+  border-radius: 25px;
+  border: none;
+  height: 40px;
+  width: 206px;
+}
+
+/* //MESSAGE PART*/
+.message-container {
+  border: black 1px solid;
+  background-color: #fff;
+  width: 400px;
+  padding: 10px;
+  box-shadow: 8px 8px;
+  margin-bottom: 20px;
+}
+
+.input-container {
+  display: flex;
+  justify-content: space-between;
+}
+.heart-button {
+  border-radius: 50%;
+  border: none;
+  width: 40px;
+  height: 40px;
+}
+.likes-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.x-heart {
+  font-size: 12px;
+  padding-left: 5px;
+}
+
+.time {
+  font-size: 12px;
 }
