--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,14 @@
+* {
+  margin: 0; 
+  padding: 0;  
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: content-box;
+  -webkit-font-smoothing: antialiased; 
+  text-rendering: optimizeLegibility;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,3 +20,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.message-card {
+  margin: 25px;
+  border: 1px solid;
+  padding: 25px;
+  box-shadow: 5px 5px 0px 0px #000;
+  /* display: grid;
+  grid-template-columns: 1, 1fr; */
+  /*display: flex;*/
+  /* align-items: center;
+  flex-wrap: wrap; */ 
+}
+
