--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,13 +5,101 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  background-image: url(rosor.jpg);
+  font-family: 'Red Hat Mono', monospace;
 }
 
 .date {
   font-style: italic;
 }
+
+.container {
+margin: 50px auto;
+width: 320px;
+display: flex;
+flex-direction: column;
+gap: 20px;
+}
+
+.thoughts-card,
+.form-card {
+  border: 1px solid;
+  padding: 20px;
+  box-shadow: 8px 8px 0px 0px #000000;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: white;
+}
+
+.form-heading {
+ font-size: 20px;
+}
+
+.textarea {
+  margin-top: 7px;
+  margin-bottom: 7px;
+
+}
+
+.thought-heading {
+  margin: 0px 0 5px 0;
+  flex-basis: 100%;
+  word-break: break-word;
+}
+
+.likesWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 80%;
+}
+
+.heart-button {
+  border-radius: 50%;
+  margin-right: 5px;
+  color: red;
+  background-color: pink;
+}
+
+.numberOfLikes {
+  font-size: 10px;
+  margin-right: 10px;
+ 
+}
+
+.date {
+  font-size: 12px;
+  color: #818080;
+}
+
+.heart-beat {
+  height: 30px;
+  cursor: pointer;
+  background-color: pink;
+  border-radius: 25px;
+}
+
+.read-heart {
+  color: red;
+}
+
+
+.heart-beat {
+  animation: heartbeat 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
