--- a/code/src/index.css
+++ b/code/src/index.css
@@ -63,14 +63,23 @@ form {
 
 .text-thought {
   word-break: break-word;
+  background-color: white;
+  word-break: break-word;
+  padding: 1em;
 }
 
 .likes-container {
+  padding: 0.5em;
+  display: flex;
+  justify-content: center;
+  margin: 0.5em;
 }
 .icons {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
-.heart {
-}
+
 .time {
 }
 p {
