--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,122 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Trispace", sans-serif;
+  background-color: #ffadad;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.date {
+  font-style: italic;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+  word-break: break-word;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  border: solid 1px black;
+  padding: 20px;
+  box-shadow: 5px 5px;
+  background-color: #f5f5f5;
+  font-size: 14px;
+  margin-bottom: 20px;
+}
+
+label {
+  font-weight: bold;
+}
+
+textarea {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  min-height: 60px;
+  width: 90%;
+  border: solid 2px rgba(0, 0, 0, 0.2);
+}
+
+.submit-button {
+  background-color: #ffadad;
+  border-radius: 20px;
+  border: none;
+  padding: 10px;
+  width: 250px;
+  transition: all 0.2s ease-in-out;
+  font-weight: bold;
+}
+
+.submit-button:hover {
+  transform: scale(1.1);
+}
+
+.new-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin: 30px 0;
+  width: 90%;
+  max-width: 500px;
+}
+
+.new-thoughts-card {
+  border: solid 1px black;
+  padding: 20px;
+  box-shadow: 5px 5px;
+  background-color: white;
+  margin-bottom: 30px;
+}
+
+.like-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  transition: all 0.2s ease-in-out;
+}
+
+.like-button:hover {
+  transform: scale(1.1);
+}
+
+.button-card {
+  display: flex;
+  flex-direction: row;
+}
+
+.likes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.likes-amount {
+  font-size: 12px;
+  margin-left: 5px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.date {
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.3);
+} */
