--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 20px;
   font-family: "Roboto Mono", monospace;
   box-sizing: border-box;
   background-color: pink;
@@ -39,7 +39,7 @@ form {
   width: 206px;
 }
 
-/* //MESSAGE PART*/
+/* MESSAGE PART*/
 .message-container {
   border: black 1px solid;
   background-color: #fff;
