--- a/code/src/index.css
+++ b/code/src/index.css
@@ -73,6 +73,11 @@ p, button, textarea {
   font-size: large;
 }
 
+.date {
+  font-style: italic;
+  font-size: smaller;
+}
+
 @media (min-width: 667px) {
   form {
     width: 50%;
