--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.card{
+  background-color: grey;
+  width: 400px;
+  margin: 20px auto;
+  padding: 30px;
+}
+
